--- a/bloco10-TestesComJest/10.2/package.json
+++ b/bloco10-TestesComJest/10.2/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
- }
+  "license": "ISC",
+  "dependencies": {
+    "jest": "^27.0.6",
+    "node-fetch": "^2.6.1"
+  }
+}
